# astromorph

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  astromorph-overview.drawio  astromorph_usage_guide.md  codemeta.json  example_settings.toml  main.py  pyproject.toml  requirements.txt  tensorboard_run.txt
astromorph/: app.py  pipeline_01_training.py  pipeline_02_inference.py
astromorph/byol/: byol.py  byol_trainer.py
astromorph/datasets/: base_dataset.py  filelist_dataset.py
astromorph/src/: basic_training.py  dataset.py  inference.py  pipeline_01_training.py  pipeline_02_inference.py  settings.py
astromorph/src/byol/: __init__.py  byol.py  byol_trainer.py  learner.py  mlp.py  netwrapper.py
astromorph/src/datasets/: __init__.py  base_dataset.py  filelist_dataset.py  helpers.py  masked_dataset.py
astromorph/src/models/: __init__.py  cloudscanner.py  fewer_layers_resnet.py
src/astromorph/: __init__.py  pipeline_01_training.py  pipeline_02_inference.py
src/astromorph/byol/: byol.py  min_max_norm.py
src/astromorph/datasets/: __init__.py  filelist_dataset.py
src/astromorph/models/: astro_morphology_model.py
