[project]
name = "astromorph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Leon Boschman", email = "leon.boschman@chalmers.se" },
  { name = "Otoniel Maya Lucas", email = "otoniel.maya@chalmers.se" },
  { name = "Per Bjerkeli", email = "per.bjerkeli@chalmers.se" },
  { name = "Jouni Kainulainen", email = "jouni.kainulainen@chalmers.se" },
  { name = "M. Carmen Toribio", email = "toribio@chalmers.se" },
]
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7.2",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "pydantic>=2.7.1",
  "scikit-image>=0.0",
  "scikit-learn>=1.4.2",
  "scipy>=1.13.0",
  "tensorboard>=2.16.2",
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "tqdm>=4.66.2",
]
optional-dependencies = { fits = ["astropy>=6.0.1"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
